--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home</title>
+  <title>Sample Site</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  Home Page
+  <h1>{{pageName}}</h1>
+  <p>{{welcomeMessage}}</p>
+  
+  <footer>{{currentYear}}</footer>
 </body>
 </html>
