--- a/views/template.hbs
+++ b/views/template.hbs
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About</title>
+  <title>Sample Site</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  About Page
+  <h1>{{pageName}} Page</h1>
+
+  <footer>{{currentYear}}</footer>
 </body>
 </html>
