--- a/views/template.hbs
+++ b/views/template.hbs
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  <h1>{{pageName}} Page</h1>
+  {{> header}}
 
-  <footer>{{currentYear}}</footer>
+  {{> footer}}
 </body>
 </html>
